# life-weeks

./: CMakeLists.txt  README.md  main.cpp
src/ui/: BirthDateDialog.qml  Main.qml
